Gopath is now passed to nodejs so we don't need to copy everything to the real gopath. Go dependencies are managed by govend. Moved the enrollID functionality to the auth service. Added logs directory to source control. Downloading bluemix certificate in code now instead of as a manual action

--- a/manifest.yml
+++ b/manifest.yml
@@ -7,4 +7,4 @@ applications:
   disk_quota: 1024M
   command: "NODE_ENV=production node app.js"
 services:
-- BLOCKCHAIN_SERVICE_NAME
+- Blockchain-xt
