A lot of changes and improvements. HFC v0.5.4 and one-command bluemix deployment! See below for more detailed list.
- govend: all vendor packages to build the chaincode are automatically downloaded by govend module (required govend!)
- npm run gobuild: to test bulding of chaincode
- chaincode restructured: main chaincode file and data, query, invoke, utils folders
- chaincode improved and optimized
- chaincode functions mapped in a nicer way
- docker compose file: added (but commented) settings to have 4VPs running PBFT consensus (bluemix-like)
- start script updated: the user can choose whether clean the network or keep it
- watchchaincode changes: extended to all the folders
- readme updated
- deployment also on production automatized in app.js and blockchain.js
- deployAndRegister removed (not needed anymore)
- invokeTestData made in one call (saving a lot of time!)
- various optimizations in the services and controllers (more checks added)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-node_modules/*
-client/assets/node_modules/*
+node_modules/
+client/assets/node_modules/
 blockchain/deployLocal/*
 !blockchain/deployLocal/.gitkeep
 *.css
@@ -10,5 +10,4 @@ npm-debug.log.*
 src/build-chaincode/vendor
 blockchain/deployBluemix/keyValueStore/
 blockchain/deployBluemix/chaincode_id
-/src/build-chaincode/vendor
-/src/build-chaincode/build-chaincode
+src/build-chaincode/build-chaincode
