--- a/compose-defaults.yml
+++ b/compose-defaults.yml
@@ -1,16 +1,16 @@
 vp:
-  image: rikmoedt/fabric-peer:0.5-dp 
+  image: hyperledger/fabric-peer:x86_64-0.6.1-preview
   volumes:
     - /var/run/docker.sock:/var/run/docker.sock
+#    - ./blockchain/core.yaml:/opt/gopath/src/github.com/hyperledger/fabric/peer/core.yaml
   environment:
     - CORE_PEER_ADDRESSAUTODETECT=true
     - CORE_VM_ENDPOINT=unix:///var/run/docker.sock
-    - CORE_SECURITY_ENABLED=true
-    - CORE_SECURITY_PRIVACY=true
-    - CORE_LOGGING_LEVEL=DEBUG
+    - CORE_LOGGING_LEVEL=INFO
     - CORE_PEER_PKI_ECA_PADDR=membersrvc:7054
     - CORE_PEER_PKI_TCA_PADDR=membersrvc:7054
     - CORE_PEER_PKI_TLSCA_PADDR=membersrvc:7054
+    - CORE_SECURITY_ENABLED=true
 #    activate for testing in a simulated bluemix blockchain service environment
 #    - CORE_PEER_VALIDATOR_CONSENSUS_PLUGIN=pbft
 #    - CORE_PBFT_GENERAL_MODE=batch
